<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/title_menu_setting"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/menu_language"
                android:title="@string/change_language"/>
            <item
                android:id="@+id/menu_theme"
                android:title="@string/menu_change_theme" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/change_language"
        app:showAsAction="always"/>
</menu>